chore: Add daisyUI with default themes

--- a/turtlemail/templates/turtlemail/base.jinja
+++ b/turtlemail/templates/turtlemail/base.jinja
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="de">
+<html lang="de" data-theme="light">
     <head>
         <meta charset="UTF-8">
         <link href="{{ static("turtlemail/bundled/favicon.svg") }}" rel="icon" type="image/svg+xml">
