--- a/turtlemail/templates/turtlemail/index.jinja
+++ b/turtlemail/templates/turtlemail/index.jinja
@@ -1,7 +1,8 @@
 {% extends "turtlemail/base.jinja" %}
 
 {% block body %}
-    <div class="h-[100dvh] bg-teal-100 flex justify-center items-center">
-        <p class="w-max-[50ch] rounded-lg p-6 bg-white">Hallo turtlemail!</p>
+    <div class="h-[100dvh] bg-base-200 flex justify-center items-center flex-col gap-2">
+        <p class="w-max-[50ch] rounded-lg p-6 bg-base-100">Hallo turtlemail!</p>
+        <button class="btn btn-primary">DaisyUI button</button>
     </div>
 {% endblock %}
