chore: Add formatting for jinja files

--- a/turtlemail/templates/turtlemail/base.jinja
+++ b/turtlemail/templates/turtlemail/base.jinja
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de" data-theme="light">
     <head>
         <meta charset="UTF-8">
@@ -11,5 +11,7 @@
         {{ vite_assets("src/style.css") }}
         {{ vite_assets("src/main.ts") }}
     </head>
-    <body>{% block body %}{% endblock %}</body>
+    <body>
+        {% block body %}{% endblock %}
+    </body>
 </html>
