feat: Add layout with navigation

--- a/turtlemail/templates/turtlemail/base.jinja
+++ b/turtlemail/templates/turtlemail/base.jinja
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" data-theme="light">
+<html lang="de" data-theme="light" class="h-full min-h-full bg-base-200">
     <head>
         <meta charset="UTF-8">
         <link href="{{ static("turtlemail/bundled/favicon.svg") }}" rel="icon" type="image/svg+xml">
