--- a/turtlemail/templates/turtlemail/deliveries.jinja
+++ b/turtlemail/templates/turtlemail/deliveries.jinja
@@ -2,8 +2,7 @@
 {% block content %}
     <div class="flex flex-col items-center justify-center gap-8">
         <div class="p-4 bg-base-100 rounded-box">
-            <p class="w-max-[50ch] rounded-lg p-6">{{ _("Hello %(name)s!", name="turtlemail") }}</p>
-            <button class="btn btn-primary" hx-get="/">load something from the server</button>
+            <a href="{{ url("create_packet") }}" class="btn btn-primary">{{ _("Place a delivery") }}</a>
         </div>
     </div>
 {% endblock %}
