feat: stays list and creation form

--- a/turtlemail/templates/turtlemail/profile.jinja
+++ b/turtlemail/templates/turtlemail/profile.jinja
@@ -1,6 +1,6 @@
 {% extends "turtlemail/layout.jinja" %}
 {% block content %}
-    <div class="p-8 bg-base-100 rounded-box">
+    <div class="p-8 bg-base-100 rounded-box basis-80">
         <h2 class="text-2xl font-bold">
             {{ request.user.username }}
             {% if request.user.is_staff %}<span class="ml-1 badge">{{ _("staff") }}</span>{% endif %}
@@ -11,7 +11,7 @@
         <p>{{ request.user.email }}</p>
         <h3 class="mt-4 text-sm text-base-content/80">{{ _("Joined") }}</h3>
         <p>{{ request.user.date_joined|date }}</p>
-        <div class="flex justify-end mt-2">
+        <div class="flex justify-end mt-4">
             <a href="{{ url("logout") }}" class="btn">{{ _("Log Out") }}</a>
         </div>
     </div>
