--- a/turtlemail/templates/turtlemail/layout.jinja
+++ b/turtlemail/templates/turtlemail/layout.jinja
@@ -36,7 +36,9 @@
                class="h-8 px-4 mr-4 badge hover:bg-base-200 {% if url_name == "profile" %}badge-neutral{% endif %}">{{ request.user.username }}</a>
         </div>
     </nav>
-    <div class="pt-8 pb-32 lg:pb-8" id="hx-nav-boost-content">
+    <div class="flex flex-col items-center px-4 pt-8 pb-32 lg:pb-8"
+         id="hx-nav-boost-content">
+        {% include "turtlemail/_messages.jinja" %}
         {% block content %}{% endblock %}
     </div>
 {% endblock %}
