--- a/turtlemail/templates/turtlemail/_select_field.jinja
+++ b/turtlemail/templates/turtlemail/_select_field.jinja
@@ -7,8 +7,8 @@
             class="select select-bordered {{ "input-error" if field.errors|length > 0 }}">
         {% for value, label in field.field.choices %}
             <option value="{{ value }}"
-                {# Convert value to string since the comparison wont work for integer fields otherwise #}
-                {% if field.value()==value|string %}selected{% endif %}>{{ label }}</option>
+                {# Convert values to strings since the comparison wont work for integer fields otherwise #}
+                {% if field.value()|string==value|string %}selected{% endif %}>{{ label }}</option>
         {% endfor %}
     </select>
     {% for error in field.errors %}<p class="text-error">{{ error }}</p>{% endfor %}
