--- a/turtlemail/templates/turtlemail/layout.jinja
+++ b/turtlemail/templates/turtlemail/layout.jinja
@@ -12,7 +12,7 @@
         </a>
         <a href="{{ url("profile") }}"
            {% if url_name == "profile" %}class="active"{% endif %}>
-            <span class="btm-nav-label">{{ _("Username") }}</span>
+            <span class="btm-nav-label">{{ request.user.username }}</span>
         </a>
     </nav>
     <div class="sticky top-0 hidden navbar bg-base-100 lg:flex">
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar-end">
             <a href="{{ url("profile") }}"
-               class="h-8 px-4 mr-4 badge hover:bg-base-200 {% if url_name == "profile" %}badge-neutral{% endif %}">{{ _("Username") }}</a>
+               class="h-8 px-4 mr-4 badge hover:bg-base-200 {% if url_name == "profile" %}badge-neutral{% endif %}">{{ request.user.username }}</a>
         </div>
     </div>
     <div class="pt-8 pb-32 lg:pb-8" id="hx-nav-boost-content">
