--- a/turtlemail/templates/registration/signup_and_login.jinja
+++ b/turtlemail/templates/registration/signup_and_login.jinja
@@ -1,8 +1,8 @@
 {% extends "turtlemail/base.jinja" %}
 {% block body %}
-    <div class="h-screen bg-base-200 flex items-center align-center">
-        <div class="w-full md:w-1/3 space-y-6 bg-base-100 mx-auto my-auto p-10 rounded-box mx-2">
-            <h2 class="text-4xl text-center">{{ _("%(action)s", action=form.action) }}</h2>
+    <div class="flex items-center h-screen bg-base-200 align-center">
+        <div class="w-full p-10 mx-2 mx-auto my-auto space-y-6 md:w-1/3 bg-base-100 rounded-box">
+            <h1 class="text-4xl text-center">{{ _("%(action)s", action=form.action) }}</h1>
             <form method="post">
                 {% csrf_token %}
                 {% if form.errors %}
@@ -10,7 +10,7 @@
                         {{ form.non_field_errors() }}
                         {% for field in form %}
                             {% for error in field.errors %}
-                                <div class="alert alert-error my-1">
+                                <div class="my-1 alert alert-error">
                                     <span>{{ error }}</span>
                                 </div>
                             {% endfor %}
