feat: Allow accepting or denying suggested route steps

--- a/turtlemail/templates/turtlemail/_messages.jinja
+++ b/turtlemail/templates/turtlemail/_messages.jinja
@@ -10,6 +10,7 @@
                     {{ message }}
                 {% endif %}
                 <button class="btn btn-ghost btn-square btn-sm justify-self-end"
+                        title="{{ _("Dismiss") }}"
                         onclick="this.parentNode.remove()">{% include "turtlemail/icons/circle_x.jinja" %}</button>
             </li>
         {% endfor %}
