--- a/turtlemail/templates/turtlemail/icons/circle_x.jinja
+++ b/turtlemail/templates/turtlemail/icons/circle_x.jinja
@@ -5,6 +5,6 @@
      stroke-width="1.5"
      stroke="currentColor"
      aria-hidden="true"
-     class="w-6 h-6">
+     class="size-6">
     <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
 </svg>
