--- a/turtlemail/templates/registration/signup_and_login.jinja
+++ b/turtlemail/templates/registration/signup_and_login.jinja
@@ -2,7 +2,7 @@
 {% block body %}
     <div class="flex items-center h-screen bg-base-200 align-center">
         <div class="w-full p-10 mx-2 mx-auto my-auto space-y-6 md:w-1/3 bg-base-100 rounded-box">
-            <h1 class="text-4xl text-center">{{ _("%(action)s", action=form.action) }}</h1>
+            <h1 class="text-4xl text-center">{{ form.action }}</h1>
             <form method="post">
                 {% csrf_token %}
                 {% if form.errors %}
@@ -22,6 +22,8 @@
                     <button type="submit" class="btn btn-primary">{{ _("%(action)s", action=form.action) }}</button>
                 </div>
             </form>
+            <a class="block mt-2 text-center underline hover:text-secondary"
+               href="{{ form.other_form_url }}">{{ form.other_form_link_text }}</a>
         </div>
     </div>
 {% endblock %}
