--- a/turtlemail/templates/turtlemail/packet_detail.jinja
+++ b/turtlemail/templates/turtlemail/packet_detail.jinja
@@ -1,66 +1,79 @@
 {% extends "turtlemail/layout.jinja" %}
 {% block content %}
-    <div class="p-8 bg-base-100 rounded-box">
-        <h2 class="text-xl font-bold">📦 {{ packet.human_id }}</h2>
-        {% if packet.is_sender_or_recipient(request.user) %}
-            {% if packet.sender.id == request.user.id %}
-                <h3 class="mt-2 text-sm text-base-content/60">{{ _("Recipient") }}</h3>
-                <p>
-                    {{ _("You're sending this delivery to") }} <strong>{{ packet.recipient.username }}</strong>.
-                </p>
+    <div class="grid w-full max-w-lg gap-4">
+        <div class="grid p-8 bg-base-100 rounded-box">
+            <h2 class="text-xl font-bold">📦 {{ packet.human_id }}</h2>
+            {% if packet.is_sender_or_recipient(request.user) %}
+                {% if packet.sender.id == request.user.id %}
+                    <h3 class="mt-2 text-sm text-base-content/60">{{ _("Recipient") }}</h3>
+                    <p>
+                        {{ _("You're sending this delivery to") }} <strong>{{ packet.recipient.username }}</strong>.
+                    </p>
+                {% endif %}
+                {% if packet.recipient.id == request.user.id %}
+                    <h3 class="mt-2 text-sm text-base-content/60">{{ _("Sender") }}</h3>
+                    <p>
+                        <strong>{{ packet.sender.username }}</strong> {{ _("is sending this delivery to you.") }}
+                    </p>
+                {% endif %}
             {% endif %}
-            {% if packet.recipient.id == request.user.id %}
-                <h3 class="mt-2 text-sm text-base-content/60">{{ _("Sender") }}</h3>
-                <p>
-                    <strong>{{ packet.sender.username }}</strong> {{ _("is sending this delivery to you.") }}
-                </p>
-            {% endif %}
-        {% endif %}
-        <h3 class="mt-2 text-sm text-base-content/60">{{ _("Status") }}</h3>
-        <p>{{ packet.status().description() }}</p>
-        {% if users_route_steps|length > 0 %}
+            <h3 class="mt-2 text-sm text-base-content/60">{{ _("Status") }}</h3>
+            <p>{{ packet.status().description() }}</p>
             <h3 class="mt-2 text-sm text-base-content/60">{{ _("Your next steps") }}</h3>
-            <ul>
-                {% for step in users_route_steps %}
-                    <li>
+            {% for step in users_route_steps %}
+                <div class="mt-2 border rounded shadow-sm join join-vertical border-neutral-300">
+                    <div class="px-4 pt-3 pb-5 join-item">
+                        <div class="mb-1 text-xs text-base-content/80">{{ step.get_status_display() }}</div>
+                        <p>{{ step.stay.location.name }}</p>
                         {% if step.previous_step is not none %}
-                            {% set date_description = step.describe_overlapping_date_range(step.next_step) %}
-                            <strong>{{ date_description }}</strong>,
-                            {{ step.stay.location.name }}:
-                            {{ _("Pick up from %(name)s", name=step.previous_step.stay.user.username) }}
+                            <p>
+                                {% set date_description = step.describe_overlapping_date_range(step.next_step) %}
+                                <strong>{{ date_description }}</strong>:
+                                {{ _("Pick up from %(name)s", name=step.previous_step.stay.user.username) }}
+                            </p>
                         {% endif %}
-                    </li>
-                    <li>
                         {% if step.next_step is not none %}
-                            {% set date_description = step.describe_overlapping_date_range(step.next_step) %}
-                            <strong>{{ date_description }}</strong>,
-                            {{ step.stay.location.name }}:
-                            {{ _("Hand over to %(name)s", name=step.next_step.stay.user.username) }}
+                            <p>
+                                {% set date_description = step.describe_overlapping_date_range(step.next_step) %}
+                                <strong>{{ date_description }}</strong>:
+                                {{ _("Hand over to %(name)s", name=step.next_step.stay.user.username) }}
+                            </p>
                         {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-        {% if packet.delivery_logs.all()|length > 0 %}
-            <h3 class="mt-2 text-sm text-base-content/60">{{ _("Activity") }}</h3>
-            <ul class="mt-1">
-                {% for log in packet.delivery_logs.all() %}
+                    </div>
+                    {% if step.status == step.SUGGESTED %}
+                        <a href="{{ url("update_request", pk=step.id) }}"
+                           hx-target="#step_request_box"
+                           hx-boost="true"
+                           hx-push-url="false"
+                           class="join-item btn">{{ _("Respond to this suggestion") }}</a>
+                    {% endif %}
+                </div>
+            {% endfor %}
+            {% if users_route_steps|length == 0 %}
+                <p>{{ _("You're not involved in the current travel plans for this delivery.") }}</p>
+            {% endif %}
+            {% if packet.delivery_logs.all()|length > 0 %}
+                <h3 class="mt-2 text-sm text-base-content/60">{{ _("Activity") }}</h3>
+                <ul class="mt-1">
+                    {% for log in packet.delivery_logs.all() %}
+                        <li class="flex flex-col">
+                            <div class="flex items-center gap-2">
+                                <span class="w-2 h-2 rounded-full bg-primary">&nbsp</span>
+                                <div class="text-base-content/80">{{ log.created_at|date }}</div>
+                            </div>
+                            <div class="px-3 pb-2 ml-1 border-l border-base-300">{{ log.description() }}</div>
+                        </li>
+                    {% endfor %}
                     <li class="flex flex-col">
                         <div class="flex items-center gap-2">
                             <span class="w-2 h-2 rounded-full bg-primary">&nbsp</span>
-                            <div class="text-base-content/80">{{ log.created_at|date }}</div>
+                            <div class="text-base-content/80">{{ packet.created_at|date }}</div>
                         </div>
-                        <div class="px-3 pb-2 ml-1 border-l border-base-300">{{ log.get_action_display() }}</div>
+                        <div class="px-3 ml-1">{{ _("Delivery created") }}</div>
                     </li>
-                {% endfor %}
-                <li class="flex flex-col">
-                    <div class="flex items-center gap-2">
-                        <span class="w-2 h-2 rounded-full bg-primary">&nbsp</span>
-                        <div class="text-base-content/80">{{ packet.created_at|date }}</div>
-                    </div>
-                    <div class="px-3 pb-2 ml-1">{{ _("Delivery created") }}</div>
-                </li>
-            </ul>
-        {% endif %}
+                </ul>
+            {% endif %}
+        </div>
+        <div id="step_request_box"></div>
     </div>
 {% endblock %}
