--- a/turtlemail/templates/turtlemail/create_packet_form.jinja
+++ b/turtlemail/templates/turtlemail/create_packet_form.jinja
@@ -30,6 +30,7 @@
                                hx-target="#search-results"
                                hx-select="#search-results"
                                hx-swap="outerHTML"
+                               hx-push-url="false"
                                {% if field.value() != None %}value="{{ field.value() }}"{% endif %}>
                         {% for error in field.errors %}<p class="text-error">{{ error }}</p>{% endfor %}
                     </label>
