--- a/turtlemail/templates/turtlemail/route_step_request_form.jinja
+++ b/turtlemail/templates/turtlemail/route_step_request_form.jinja
@@ -33,7 +33,7 @@
                    href="{{ url("packet_detail", slug=step.packet.human_id) }}">"{{ step.packet.human_id }}"</a>
             </h2>
             <div class="my-4 text-primary">
-                <p>📍 {{ step.stay.location.name }}</p>
+                <p>📍 {{ _("Near %(location)s", location = step.stay.location.name) }}</p>
                 {% if step.previous_step and step.previous_step.stay.user != step.user %}
                     <p>
                         🗓️ {{ step.describe_overlapping_date_range(step.previous_step) }}: {{ _("Take from %(person)s", person=step.previous_step.stay.user.username) }}
