--- a/turtlemail/templates/turtlemail/route_step_request_form.jinja
+++ b/turtlemail/templates/turtlemail/route_step_request_form.jinja
@@ -34,12 +34,12 @@
             </h2>
             <div class="my-4 text-primary">
                 <p>📍 {{ _("Near %(location)s", location = step.stay.location.name) }}</p>
-                {% if step.previous_step and step.previous_step.stay.user != step.user %}
+                {% if step.previous_step and step.previous_step.stay.user != step.stay.user %}
                     <p>
                         🗓️ {{ step.describe_overlapping_date_range(step.previous_step) }}: {{ _("Take from %(person)s", person=step.previous_step.stay.user.username) }}
                     </p>
                 {% endif %}
-                {% if step.next_step and step.next_step.stay.user != step.user %}
+                {% if step.next_step and step.next_step.stay.user != step.stay.user %}
                     <p>
                         🗓️ {{ step.describe_overlapping_date_range(step.next_step) }}: {{ _("Hand over to %(person)s", person=step.next_step.stay.user.username) }}
                     </p>
