--- a/turtlemail/templates/turtlemail/route_step_request_form.jinja
+++ b/turtlemail/templates/turtlemail/route_step_request_form.jinja
@@ -19,7 +19,7 @@
           hx-push-url="false"
           hx-target="this"
           hx-swap="outerHTML"
-          class="bg-base-100 rounded-box">
+          class="border-4 bg-base-100 rounded-box border-info">
         {% csrf_token %}
         {% if from_rejected_request %}
             <div class="p-8 bg-secondary text-secondary-content rounded-t-box">
