feat: Add landing page

--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,11 @@
         --tm-accent-color: rebeccapurple;
     }
 }
+
+@layer utilities {
+    .mask-waves {
+        mask-image: url("/-/static/turtlemail/img/wave_pattern.svg");
+        mask-repeat: no-repeat;
+        mask-size: 100% 100%;
+    }
+}
