--- a/turtlemail/templates/turtlemail/layout.jinja
+++ b/turtlemail/templates/turtlemail/layout.jinja
@@ -18,7 +18,7 @@
     </nav>
     <nav class="sticky top-0 z-10 hidden navbar bg-base-100 lg:flex">
         <div class="navbar-start">
-            <a class="text-xl btn btn-ghost" href="{{ url("deliveries") }}">
+            <a class="text-xl btn btn-ghost" href="{{ url("index") }}">
                 <img src="{{ static("turtlemail/img/logo/turtlemail-logo.svg") }}" alt="{{ _("turtlemail") }}" class="w-full h-8" />
             </a>
         </div>
