--- a/turtlemail/templates/turtlemail/base.jinja
+++ b/turtlemail/templates/turtlemail/base.jinja
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="de" data-theme="light" class="h-full min-h-full bg-base-200">
+<html lang="de"
+      data-theme="turtlemail"
+      class="h-full min-h-full bg-base-200">
     <head>
         <meta charset="UTF-8">
-        <link href="{{ static("turtlemail/img/favicon.svg") }}" rel="icon" type="image/svg+xml">
+        <link href="{{ static("turtlemail/img/logo/turtlemail-icon-rounded.svg") }}" rel="icon" type="image/svg+xml">
         <meta name="robots" content="noindex, nofollow">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta name="theme-color" content="#00543A">
