--- a/turtlemail/templates/turtlemail/deliveries.jinja
+++ b/turtlemail/templates/turtlemail/deliveries.jinja
@@ -2,6 +2,9 @@
 {% block content %}
     <div class="grid gap-8 w-full max-w-lg">
         <a href="{{ url("create_packet") }}" class="btn btn-lg btn-primary">{{ _("Place a delivery") }}</a>
+        {% for form in routing_forms %}
+            {% include "turtlemail/route_step_routing_form.jinja" %}
+        {% endfor %}
         {% for form in request_forms %}
             {% include "turtlemail/route_step_request_form.jinja" %}
         {% endfor %}
