--- a/turtlemail/templates/turtlemail/packet_detail.jinja
+++ b/turtlemail/templates/turtlemail/packet_detail.jinja
@@ -71,7 +71,7 @@
                            hx-target="#route_step_request_box"
                            hx-boost="true"
                            hx-push-url="false"
-                           class="join-item btn btn-secondary">{{ _("Respond to this suggestion") }}</a>
+                           class="join-item btn btn-secondary">{{ _("Update handover status") }}</a>
                     {% endif %}
                 </div>
             {% endfor %}
