--- a/turtlemail/templates/turtlemail/profile.jinja
+++ b/turtlemail/templates/turtlemail/profile.jinja
@@ -1,18 +1,21 @@
 {% extends "turtlemail/layout.jinja" %}
 {% block content %}
-    <div class="p-8 bg-base-100 rounded-box basis-80">
-        <h2 class="text-2xl font-bold">
-            {{ request.user.username }}
-            {% if request.user.is_staff %}<span class="ml-1 badge">{{ _("staff") }}</span>{% endif %}
-            {% if request.user.is_superuser %}<span class="ml-1 badge">{{ _("superuser") }}</span>{% endif %}
-            {% if not request.user.is_active %}<span class="ml-1 badge badge-neutral">{{ _("deactivated") }}</span>{% endif %}
-        </h2>
-        <h3 class="mt-4 text-sm text-base-content/80">{{ _("Email") }}</h3>
-        <p>{{ request.user.email }}</p>
-        <h3 class="mt-4 text-sm text-base-content/80">{{ _("Joined") }}</h3>
-        <p>{{ request.user.date_joined|date }}</p>
-        <div class="flex justify-end mt-4">
-            <a href="{{ url("logout") }}" class="btn">{{ _("Log Out") }}</a>
+    <div class="flex flex-col w-full max-w-4xl gap-4">
+        <div class="p-8 bg-base-100 rounded-box basis-80">
+            <h2 class="text-2xl font-bold">
+                {{ request.user.username }}
+                {% if request.user.is_staff %}<span class="ml-1 badge">{{ _("staff") }}</span>{% endif %}
+                {% if request.user.is_superuser %}<span class="ml-1 badge">{{ _("superuser") }}</span>{% endif %}
+                {% if not request.user.is_active %}<span class="ml-1 badge badge-neutral">{{ _("deactivated") }}</span>{% endif %}
+            </h2>
+            <h3 class="mt-4 text-sm text-base-content/80">{{ _("Email") }}</h3>
+            <p>{{ request.user.email }}</p>
+            <h3 class="mt-4 text-sm text-base-content/80">{{ _("Joined") }}</h3>
+            <p>{{ request.user.date_joined|date }}</p>
+            <div class="flex justify-end mt-4">
+                <a href="{{ url("logout") }}" class="btn">{{ _("Log Out") }}</a>
+            </div>
         </div>
+        {% include "turtlemail/locations/list.jinja" %}
     </div>
 {% endblock %}
